--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -133,6 +133,7 @@
         style="?attr/floatingActionButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/save_new_trip_button"
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_baseline_save_24"
         app:layout_constraintBottom_toBottomOf="parent"
