--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/progress_indicator"
-                android:indeterminate="true"
+                android:indeterminate="false"
                 android:visibility="gone"/>
         </com.google.android.material.appbar.AppBarLayout>
         
