--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,95 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/registration_form"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/registration_form"
     tools:context=".fragments.RegistrationFragment">
 
-    <TableRow
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:id="@+id/user_name_layout"
+        android:layout_margin="5dp"
+        android:hint="@string/user_name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/registration_email_layout"
-            android:layout_weight="0.5"
-            android:padding="5dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_name"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/registration_email"
-                android:inputType="textEmailAddress"
-                android:id="@+id/registration_email">
-
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/registration_email_confirm_layout"
-            android:layout_weight="0.5"
-            android:padding="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/registration_confirm_email"
-                android:inputType="textEmailAddress"
-                android:id="@+id/registration_email_confirm">
-
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
-    </TableRow>
-    <TableRow
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:id="@+id/user_surname_layout"
+        android:layout_margin="5dp"
+        android:hint="@string/user_surname"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/user_name_layout"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/registration_password_layout"
-            android:layout_weight="0.5"
-            android:padding="5dp">
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/user_surname"
+            android:inputType="text"/>
+    </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/registration_password"
-                android:inputType="textPassword"
-                android:id="@+id/registration_password">
-
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/registration_password_confirm_layout"
-            android:layout_weight="0.5"
-            android:padding="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/registration_password_confirm"
-                android:inputType="textPassword"
-                android:id="@+id/registration_password_confirm">
-
-            </com.google.android.material.textfield.TextInputEditText>
-        </com.google.android.material.textfield.TextInputLayout>
-    </TableRow>
-    <TableRow
-        android:layout_width="match_parent"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/registration_email_layout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:layout_margin="5dp"
+        android:hint="@string/registration_email"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
+        app:layout_constraintEnd_toStartOf="@+id/registration_email_confirm_layout"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:layout_weight="0.5"
-            android:id="@+id/registration_button"
-            android:text="@string/registration_button"
-            android:layout_margin="5dp"/>
-        <Button
-            android:layout_weight="0.5"
-            android:id="@+id/cancel_registration_button"
-            android:text="@string/registration_cancel"
-            android:layout_margin="5dp"/>
-    </TableRow>
-</TableLayout>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/registration_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/registration_email_confirm_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="@string/registration_confirm_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/registration_email_layout"
+        app:layout_constraintTop_toBottomOf="@+id/user_name_layout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/registration_email_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/registration_password_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="@string/registration_password"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
+        app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/registration_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/registration_password_confirm_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:hint="@string/registration_password_confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
+        app:layout_constraintTop_toBottomOf="@+id/registration_email_layout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/registration_password_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/Widget.Material3.Button.TextButton"
+        android:id="@+id/registration_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/registration_button"
+        app:layout_constraintEnd_toStartOf="@+id/cancel_registration_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registration_password_layout" />
+
+    <com.google.android.material.button.MaterialButton
+        style="@style/Widget.Material3.Button.TextButton"
+        android:id="@+id/cancel_registration_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:text="@string/registration_cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/registration_button"
+        app:layout_constraintTop_toBottomOf="@+id/registration_password_confirm_layout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
