--- a/app/src/main/res/layout/fragment_share_dialog.xml
+++ b/app/src/main/res/layout/fragment_share_dialog.xml
@@ -24,6 +24,7 @@
         android:layout_height="0dp"
         android:id="@+id/users_recycler_view"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_field_layout"/>
+        app:layout_constraintTop_toBottomOf="@+id/search_field_layout"
+        app:layout_constraintHeight_min="wrap" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
