--- a/app/src/main/res/layout/fragment_select_users_dialog.xml
+++ b/app/src/main/res/layout/fragment_select_users_dialog.xml
@@ -20,11 +20,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
         android:id="@+id/users_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_field_layout"
-        app:layout_constraintHeight_min="wrap" />
+        app:layout_constrainedHeight="true"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
