--- a/app/src/main/res/layout/fragment_select_users_dialog.xml
+++ b/app/src/main/res/layout/fragment_select_users_dialog.xml
@@ -5,12 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/search_field_layout"
         android:hint="@string/search_for_users"
         app:startIconDrawable="@drawable/ic_baseline_search_24"
         app:startIconContentDescription="@string/search_for_users"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -22,11 +24,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/users_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_field_layout"
-        app:layout_constrainedHeight="true"/>
+        app:layout_constraintTop_toBottomOf="@+id/search_field_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
