--- a/app/src/main/res/layout/fragment_select_users_dialog.xml
+++ b/app/src/main/res/layout/fragment_select_users_dialog.xml
@@ -24,11 +24,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/users_recycler_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constrainedHeight="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_field_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
