--- a/app/src/main/res/layout/fragment_select_users_dialog.xml
+++ b/app/src/main/res/layout/fragment_select_users_dialog.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/search_field_layout"
         android:hint="@string/search_for_users"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="5dp"
         app:startIconDrawable="@drawable/ic_baseline_search_24"
-        app:startIconContentDescription="@string/search_for_users"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:startIconContentDescription="@string/search_for_users">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -23,11 +23,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/users_recycler_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_field_layout" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="5dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
