--- a/app/src/main/res/layout/fragment_select_users.xml
+++ b/app/src/main/res/layout/fragment_select_users.xml
@@ -24,6 +24,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textIsSelectable="false"
             android:id="@+id/search_field_text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
