--- a/app/src/main/res/layout/fragment_select_users.xml
+++ b/app/src/main/res/layout/fragment_select_users.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textIsSelectable="false"
+            android:inputType="textMultiLine"
             android:id="@+id/search_field_text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
