Replaced chips with pager to see picked users

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -83,6 +83,6 @@
         android:label="@string/settings" />
     <fragment
         android:id="@+id/selectUsersFragment"
-        android:name="it.units.simandroid.progetto.fragments.SelectUsersFragment"
+        android:name="it.units.simandroid.progetto.fragments.ShareTripFragment"
         android:label="SelectUsersDialogFragment" />
 </navigation>
