--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -74,7 +74,7 @@
             app:argType="string"
             android:defaultValue="@null" />
         <action
-            android:id="@+id/action_tripContentFragment_to_selectUsersDialogFragment"
+            android:id="@+id/action_tripContentFragment_to_selectUsersFragment"
             app:destination="@id/selectUsersFragment" />
     </fragment>
     <fragment
@@ -83,6 +83,6 @@
         android:label="@string/settings" />
     <fragment
         android:id="@+id/selectUsersFragment"
-        android:name="it.units.simandroid.progetto.fragments.ShareTripFragment"
-        android:label="SelectUsersDialogFragment" />
+        android:name="it.units.simandroid.progetto.fragments.SelectUsersFragment"
+        android:label="SelectUsersFragment" />
 </navigation>
