--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -7,8 +7,8 @@
     android:minHeight="64dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/user_icon"
         android:src="@drawable/ic_baseline_person_outline_24"
         android:layout_marginHorizontal="16dp"
@@ -22,29 +22,42 @@
         android:layout_height="wrap_content"
         android:id="@+id/user_name_surname"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         android:textAppearance="?attr/textAppearanceSubtitle1"
         android:textColor="?attr/colorOnSurface"
         android:alpha="0.87"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_icon"
         app:layout_constraintBottom_toTopOf="@+id/user_email"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toStartOf="@+id/user_selected_checkbox"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/user_email"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:textAppearance="?attr/textAppearanceBody2"
         android:textColor="?attr/colorOnSurface"
         android:alpha="0.87"
         app:layout_constraintTop_toBottomOf="@+id/user_name_surname"
         app:layout_constraintStart_toEndOf="@+id/user_icon"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/user_selected_checkbox"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:id="@+id/user_selected_checkbox"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
