Able to update authorized users

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -84,5 +84,10 @@
     <fragment
         android:id="@+id/selectUsersFragment"
         android:name="it.units.simandroid.progetto.fragments.SelectUsersFragment"
-        android:label="SelectUsersFragment" />
+        android:label="SelectUsersFragment" >
+        <argument
+            android:name="tripId"
+            app:argType="string"
+            android:defaultValue="@null" />
+    </fragment>
 </navigation>
