--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -33,6 +33,10 @@
             app:destination="@id/tripsFragment"
             app:enterAnim="@android:animator/fade_in"
             app:exitAnim="@android:anim/fade_out" />
+        <argument
+            android:name="isSharedTripsModeActive"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
     <fragment
         android:id="@+id/newTripFragment"
