--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -88,10 +88,10 @@
     <fragment
         android:id="@+id/selectUsersFragment"
         android:name="it.units.simandroid.progetto.fragments.SelectUsersFragment"
-        android:label="SelectUsersFragment" >
+        android:label="SelectUsersFragment">
         <argument
             android:name="tripId"
-            app:argType="string"
-            android:defaultValue="@null" />
+            android:defaultValue="@null"
+            app:argType="string" />
     </fragment>
 </navigation>
