Now unable to set a shared trip as favorite or to share it again

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -80,6 +80,10 @@
         <action
             android:id="@+id/action_tripContentFragment_to_selectUsersFragment"
             app:destination="@id/selectUsersFragment" />
+        <argument
+            android:name="isSharedTripsModeActive"
+            app:argType="boolean"
+            android:defaultValue="false" />
     </fragment>
     <fragment
         android:id="@+id/settings"
