Syncing settings with remote database

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -98,4 +98,5 @@
             android:defaultValue="@null"
             app:argType="string" />
     </fragment>
+    <action android:id="@+id/action_global_settings" app:destination="@id/settings"/>
 </navigation>
