Trip card sizes updated, smaller cards on large screens

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="login_form_margin">10dp</dimen>
     <dimen name="registrationFormMargin">10dp</dimen>
+    <dimen name="trip_card_width">match_parent</dimen>
 </resources>
