Modified TripContentFragment layout, added delete and favorite buttons

--- a/app/src/main/res/menu/top_app_bar_contextual_pick_trips.xml
+++ b/app/src/main/res/menu/top_app_bar_contextual_pick_trips.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete_trip"
-        android:icon="@drawable/ic_baseline_delete_24"
+        android:icon="@drawable/ic_light_delete_24"
         app:showAsAction="ifRoom"
-        android:title="@string/delete_trip"/>
+        android:title="@string/delete"/>
 </menu>
