--- a/app/src/main/res/layout/fragment_trip_content.xml
+++ b/app/src/main/res/layout/fragment_trip_content.xml
@@ -26,13 +26,23 @@
         android:layout_marginTop="16dp"
         android:textAppearance="?attr/textAppearanceTitleLarge"
         app:layout_constraintTop_toBottomOf="@+id/trip_image_pager"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/content_favorite_trip"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/content_favorite_trip"
+        android:button="@drawable/sl_baseline_favorite_24"
+        android:layout_margin="16dp"
+        app:layout_constraintStart_toEndOf="@+id/content_trip_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/content_trip_name"/>
 
     <TextView
         android:id="@+id/content_trip_destination"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20sp"
         android:layout_marginStart="16dp"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         android:textColor="?android:attr/textColorSecondary"
@@ -44,7 +54,7 @@
     <TextView
         android:id="@+id/content_trip_dates"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20sp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:textAppearance="?attr/textAppearanceBodyMedium"
