--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="16dp">
 
         <ImageView
@@ -55,12 +55,12 @@
             android:id="@+id/trip_start_end_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textColor="?android:attr/textColorSecondary"
             android:drawablePadding="2dp"
-            app:layout_constraintStart_toEndOf="@+id/trip_location"
-            app:layout_constraintTop_toTopOf="@+id/trip_location"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/trip_location"
             app:startIconContentDescription="@string/calendar_icon_description"
             app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24">
         </TextView>
@@ -72,7 +72,7 @@
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textColor="?android:attr/textColorSecondary"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/trip_location"
+            app:layout_constraintTop_toBottomOf="@+id/trip_start_end_date"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <CheckBox
