--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/progress_indicator"
                 android:indeterminate="false"
-                android:visibility="gone"/>
+                android:visibility="invisible"/>
         </com.google.android.material.appbar.AppBarLayout>
         
         <androidx.fragment.app.FragmentContainerView
