--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -81,7 +81,9 @@
             android:layout_height="24sp"
             android:button="@drawable/sl_baseline_favorite_24"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/trip_description" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
