--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory
         app:key="user_category"
@@ -7,9 +7,11 @@
 
         <EditTextPreference
             app:key="user_name"
-            app:title="@string/user_name" />
+            app:title="@string/user_name"
+            app:summary="@string/insert_user_name"/>
         <EditTextPreference
             app:key="user_surname"
-            app:title="@string/user_surname" />
+            app:title="@string/user_surname"
+            app:summary="@string/insert_user_surname"/>
     </PreferenceCategory>
 </PreferenceScreen>
