--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,7 +64,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/login_password_layout"
         app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />
 
     <Button
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_up_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/login_password_layout"
         app:layout_constraintStart_toEndOf="@+id/login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
