--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -13,6 +13,7 @@
         android:id="@+id/user_name_layout"
         android:layout_margin="5dp"
         android:hint="@string/user_name"
+        app:errorEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/user_surname_layout"
         app:layout_constraintBaseline_toBaselineOf="@+id/user_surname_layout">
@@ -30,6 +31,7 @@
         android:id="@+id/user_surname_layout"
         android:layout_margin="5dp"
         android:hint="@string/user_surname"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/user_name_layout"
         app:layout_constraintTop_toTopOf="parent">
@@ -47,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:hint="@string/registration_email"
+        app:errorEnabled="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_email_confirm_layout"
         app:layout_constraintStart_toStartOf="parent">
@@ -64,6 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:hint="@string/registration_confirm_email"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_email_layout"
         app:layout_constraintTop_toBottomOf="@+id/user_name_layout">
@@ -81,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:hint="@string/registration_password"
+        app:errorEnabled="true"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
         app:layout_constraintStart_toStartOf="parent">
@@ -98,6 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:hint="@string/registration_password_confirm"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
         app:layout_constraintTop_toBottomOf="@+id/registration_email_layout">
@@ -129,6 +135,6 @@
         android:text="@string/registration_cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_button"
-        app:layout_constraintTop_toBottomOf="@+id/registration_password_confirm_layout" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/registration_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
