--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -86,6 +86,7 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_password"
         app:errorEnabled="true"
+        app:endIconMode="password_toggle"
         app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_confirm_layout"
         app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
         app:layout_constraintStart_toStartOf="parent">
@@ -104,6 +105,7 @@
         android:layout_margin="5dp"
         android:hint="@string/registration_password_confirm"
         app:errorEnabled="true"
+        app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/registration_password_layout"
         app:layout_constraintTop_toBottomOf="@+id/registration_email_layout">
@@ -127,7 +129,7 @@
         app:layout_constraintTop_toBottomOf="@+id/registration_password_layout" />
 
     <com.google.android.material.button.MaterialButton
-        style="@style/Widget.Material3.Button"
+        style="@style/Widget.Material3.Button.TonalButton"
         android:id="@+id/cancel_registration_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
