Added error handling for login and registration fragment

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -18,6 +18,7 @@
         android:hint="@string/username"
         android:minWidth="200dp"
         android:minHeight="48dp"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/login_password_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
         android:minWidth="200dp"
         android:minHeight="48dp"
         android:layout_marginBottom="5dp"
+        app:errorEnabled="true"
         app:endIconMode="password_toggle"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_up_button"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
         app:layout_constraintEnd_toEndOf="@id/login_password_layout"
         app:layout_constraintStart_toEndOf="@+id/login_button" />
 
